# documents

./: .gitignore  rustdocment
c++Tutorials/Basic/: structure  structure.cpp
hgtransformers/: accelerate.ipynb  autoclass.ipynb  finetunepretrained.ipynb  pipeline.ipynb  preprocess.ipynb  trainwithscript.ipynb
hgtransformers/Agents101/: agents_tools.py
hgtransformers/PEFT/: load_peft_adapter.py  quickstart.py
hgtransformers/nlp/: textclassification.py  tokenclassification.py
mcp/tutorials/weather/: claude_desktop_config.json  weather.py
mcp/weather/: package-lock.json  package.json
optuna_/: 001_first.py  002.configuations.py  003.efficient_optimization_algorithms.py
polarsdoc/: start.ipynb
pygeometric/: datasplit.py
pygeometric/Cases/: intro.py
pygeometric/Cases/DiseaseGene/: DiseaseGeneInteractions.py
pygeometric/Cases/GraphTransformer/: GraphTransformer.md  (+2 more)
pygeometric/DesignGNN/: messagepassing.py
pygeometric/colabnotebooks/: graphclassification.py  handsongnn.py  nodeclassification.py  points.py  scalinggnn.py
pygeometric/demos/: pytorch_demo.py
pyo3document/: Cargo.toml  pyproject.toml
pyo3document/chapter2/: cusclass.rs  iterableobject.rs
pyo3document/python/pyo3document/: __init__.py
pyo3document/python/tests/: test_all.py
pyo3document/rust/chapter1/: Cargo.toml
pyo3document/rust/chapter2/src/: errorhandle.rs  functions.rs  modules.rs  signature.rs
pyo3document/rust/pybindings/: Cargo.toml
pyo3document/src/: lib.rs
pytorch_tutorials/: quickstart_tutorial.ipynb  quickstart_tutorial.py
scikit/LinearModel/: ols.py
(+1 files in other folders)
