[package]
name = "pyo3document"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3document"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.23.3"

[workspace]
memebers = [
    "rust/*",
]
resolver = "2"
members = [ "rust/chapter2","rust/pybindings"]
