[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3document"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
manifest-path = "rust/pybindings/Cargo.toml"
module-name = "pyo3document"

python-source = "python"
features = ["pyo3/extension-module"]
bindings = "pyo3"

strip = true